--- a/TerugbelnotitiesApp/Views/Home/Add.cshtml
+++ b/TerugbelnotitiesApp/Views/Home/Add.cshtml
@@ -48,6 +48,6 @@
 		<span asp-validation-for="Phone" class="text-danger"></span>
 	</div>
 
-	<button class="btn" style="background-color:#73b981; color: white;" type="submit">Toevoegen</button>
+	<button class="btn" id="addNoteBtn" type="submit">Toevoegen</button>
 </form>
 
