--- a/TerugbelnotitiesApp/Areas/Identity/Pages/Account/Login.cshtml
+++ b/TerugbelnotitiesApp/Areas/Identity/Pages/Account/Login.cshtml
@@ -25,9 +25,9 @@
 				</div>
 				<div class="form-group">
 					<div class="checkbox">
-						<label asp-for="Input.RememberMe">
+						<label>
 							<input asp-for="Input.RememberMe" />
-							@Html.DisplayNameFor(m => m.Input.RememberMe)
+							Onthoud mij
 						</label>
 					</div>
 				</div>
@@ -36,13 +36,13 @@
 				</div>
 				<div class="form-group">
 					<p>
-						<a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+						<a id="forgot-password" asp-page="./ForgotPassword">Wachtwoord vergeten?</a>
 					</p>
 					<p>
-						<a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+						<a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Registreer als nieuwe gebruiker</a>
 					</p>
 					<p>
-						<a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+						<a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Stuur email-bevestiging opnieuw</a>
 					</p>
 				</div>
 			</form>
